--- a/int_wirecard/cartridge/templates/resources/wirecard.properties
+++ b/int_wirecard/cartridge/templates/resources/wirecard.properties
@@ -1,7 +1,9 @@
+setting.storefront.controller.cartridge=app_sitegenesis_controllers
+
 # Site Preferences
 checkout.wirecard.displaytext=Your order at <shop> - order number {0}
-checkout.wirecard.customerstatement=Your order at <shop> - order number {0}
-checkout.wirecard.orderdescription=Order number {0}
+checkout.wirecard.customerstatement=[Shopname] [orderReference]
+checkout.wirecard.orderdescription={0}, {1} {2}
 
 # Template: paymentmethods.isml and wirecarderrormessage.isml
 checkout.wirecard.select.description=You will be requested to pay your order after the order summary is displayed.
@@ -9,6 +11,10 @@ checkout.wirecard.failure=An error occured and your payment could not be complet
 checkout.wirecard.cancel=You canceled your payment at our payment server. Please start again to complete your order or select a different payment method.
 checkout.wirecard.error=An error occured while completing your payment. Please contact our customer service or try again.
 checkout.wirecard.sessiontimeout=PLEASE NOTE: Due to a user session timeout, you basket has been recreated but for privacy reasons you eventually need to login and/or enter gift certificates again.
+
+# Template: wirecardpendingpayment.isml
+checkout.wirecard.pendingpayment.headline=The financial institution has not yet approved your payment
+checkout.wirecard.pendingpayment.message=Payment verification is pending, confirmation will be sent later.
 
 # Template: wirecardforward.isml
 checkout.wirecard.forward.text=You will be forwarded to our payment server. Please click the button below if you are not forwarded automatically.
